# CPP-HPC

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_with_tests.sh  clean.sh
OpenCL/: ocl_dijkstra.cl  ocl_dijkstra.cpp
OpenMP/: omp_conjugate_gradient.cpp  omp_dijkstra.cpp  omp_dijkstra.hpp  omp_fft.cpp  omp_k_means_clustering.cpp  omp_matrix_multipy.cpp  omp_mergesort.cpp  omp_montecarlo_simulation.cpp  omp_quicksort.cpp  omp_quicksort.hpp  omp_sum_sub.cpp  omp_sum_sub.hpp
tests/: ocl_dijkstra_test.cpp  omp_conjugate_gradient_test.cpp  omp_dijkstra_test.cpp  omp_fft_test.cpp  omp_k_means_clustering_test.cpp  omp_matrix_multipy_test.cpp  omp_mergesort_test.cpp  omp_montecarlo_simulation_test.cpp  omp_quicksort_test.cpp  omp_sum_sub_test.cpp
